# CodeForces

./: .clangd  .gitignore  .input.txt.swa  .input.txt.swb  .input.txt.swc  .input.txt.swd  .input.txt.swe  .input.txt.swf  .input.txt.swg  .input.txt.swh  .input.txt.swi  .input.txt.swj  .input.txt.swk  .input.txt.swl  .input.txt.swm  .input.txt.swn  .input.txt.swo  .input.txt.swp  .input.xt.swp  .submit.cpp.ssq  .submit.cpp.ssr  .submit.cpp.sss  .submit.cpp.sst  .submit.cpp.ssu  .submit.cpp.ssv  .submit.cpp.ssw  .submit.cpp.ssx  .submit.cpp.ssy  .submit.cpp.ssz  .submit.cpp.sta  .submit.cpp.stb  .submit.cpp.stc  .submit.cpp.std  .submit.cpp.ste  .submit.cpp.stf  .submit.cpp.stg  .submit.cpp.sth  .submit.cpp.sti  .submit.cpp.stj  .submit.cpp.stk  (+1125 more)
CodeForces/: .gitmodules  1070C_Cloud_Computing.cpp  109C_Lucky_Tree.cpp  1251D_Salary_Changing.cpp  1282C_Petya_and_Exam.cpp  1304C_Air_Conditioner.cpp  1313C1_Skyscrapers_easy_version.cpp  1359D_Yet_Another_Yet_Another_Task.cpp  1360G_A_B_Matrix.cpp  1374E1_Reading_Books_easy_version.cpp  1385D-a-GoodString.cpp  1388D_Captain_Flint_and_Treasure.cpp  1418G_Three_Occurrences.cpp  1444B_Divide_and_Sum.cpp  144C_Anagram_Search.cpp  1467C_Three_Bags.cpp  1475D_Cleaning_the_Phone.cpp  1479B1_Painting_the_Array_I.cpp  1526C1-Potions1.cpp  1526C1-Potions2.cpp  152C_Pocket_Book.cpp  1536C_Diluc_and_Kaeya.cpp  1548B_Integers_Have_Friends.cpp  1554B_Cobb.cpp  1562D1_Two_Hundred_Twenty_One_easy_version.cpp  1608C_Game_Master.cpp  161D_Distance_in_Tree.cpp  1677A_Tokitsukaze_and_Strange_Inequality.cpp  1692H_Gambling.cpp  1715C_Monoblock.cpp  1740D_Knowledge_Cards.cpp  1748C_Zero_Sum_Prefixes.cpp  1777C_Quiz_Master.cpp  1905D_Cyclic_MEX.cpp  (+479 more)
(+482 files in other folders)
